# rtrace

./: .gitignore  Cargo.toml  README.md
scripts/: build_technical_specification.py
scripts/sandbox/linux/: run_agent.sh
scripts/sandbox/windows/: generate_viewer_demo.ps1  prepare_vm.ps1  start_vm.ps1
src/: attack.rs  detectors.rs  lib.rs  yara.rs
webui/: index.html
