[package]
name = "rtrace"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.11.8"
regex = "1.10"
lazy_static = "1.4"
yara = { version = "0.20", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["yara"]
yara = ["dep:yara"]

[dev-dependencies]
tempfile = "3.8"
